ella-parser/src/parser/snapshots/ella_parser__parser__expr__tests__binary-associativity-2.snap
---
source: ella-parser/src/parser/expr.rs
expression: "expr(\"a = b = c\")"
---
Binary {
    lhs: Identifier(
        "a",
    ),
    op: Equals,
    rhs: Binary {
        lhs: Identifier(
            "b",
        ),
        op: Equals,
        rhs: Identifier(
            "c",
        ),
    },
}
