ella-parser/src/parser/snapshots/ella_parser__parser__expr__tests__binary.snap
---
source: ella-parser/src/parser/expr.rs
expression: "expr(\"1 + 1\")"
---
Binary {
    lhs: NumberLit(
        1.0,
    ),
    op: Plus,
    rhs: NumberLit(
        1.0,
    ),
}
