ella-parser/src/parser/snapshots/ella_parser__parser__expr__tests__fn-call-with-args.snap
---
source: ella-parser/src/parser/expr.rs
expression: "expr(\"foo(1, bar)\")"
---
FnCall {
    callee: Identifier(
        "foo",
    ),
    args: [
        NumberLit(
            1.0,
        ),
        Identifier(
            "bar",
        ),
    ],
}
