ella-parser/src/parser/snapshots/ella_parser__parser__expr__tests__fn-call.snap
---
source: ella-parser/src/parser/expr.rs
expression: "expr(\"foo()\")"
---
FnCall {
    callee: Identifier(
        "foo",
    ),
    args: [],
}
